--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - go get -t -v ./...
 
 script:
-  - go test -cover -coverprofile=coverage.txt -covermode=atomic -v ./...
+  - go test -race -cover -coverprofile=coverage.txt -covermode=atomic -v ./...
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
