--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go_version: [ '1.14', '1.15', '1.16' ]
+        go_version: [ '1.14', '1.15', '1.16', '1.17' ]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v1
