--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -32,6 +32,7 @@ jobs:
         - bigcache
         - freecache
         - go_cache
+        - hazelcast
         - memcache
         - pegasus
         - redis
